thembisa_v4.7/main_analysis/scenario1b/output_30620481.txt
THEMBISA.cpp: In function ‘void ResultsAtEndOfYr2()’:
THEMBISA.cpp:13455:48: error: expected primary-expression before ‘/’ token
13455 |         double denom_w = 0.0, R_gen_std = 0.0; /
      |                                                ^
THEMBISA.cpp:13456:9: error: expected primary-expression before ‘for’
13456 |         for (ia = 0; ia < 81; ++ia){
      |         ^~~
THEMBISA.cpp:13456:35: error: expected ‘;’ before ‘)’ token
13456 |         for (ia = 0; ia < 81; ++ia){
      |                                   ^
      |                                   ;
Read input files
Log likelihood: -63.6268
Log likelihood: -66.1833
Log likelihood: -66.1902
Log likelihood: -67.4104
Log likelihood: -64.8941
Log likelihood: -71.7984
Log likelihood: -63.299
Log likelihood: -64.0307
Log likelihood: -64.0285
Log likelihood: -65.5887
Log likelihood: -68.6511
Log likelihood: -65.2506
Log likelihood: -63.0676
Log likelihood: -67.5298
Log likelihood: -65.1547
Log likelihood: -67.3922
Log likelihood: -71.8214
Log likelihood: -66.6242
Log likelihood: -71.4069
slurmstepd: error: *** JOB 30620481 ON bnode014 CANCELLED AT 2025-09-04T17:35:03 ***
